infrastructure/kubernetes/dragonfly/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dragonfly
  name: dragonfly-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - dragonfly.vipyrsec.com
      secretName: dragonfly-tls
  rules:
    - host: dragonfly.vipyrsec.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mainframe
                port:
                  number: 8000
